// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component renders correctly 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      undefined,
      Object {},
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "padding": 10,
        },
        Object {},
        Object {
          "backgroundColor": "#E62272",
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#FFFFFF",
            "fontSize": 14,
            "justifyContent": "center",
            "textAlign": "center",
          },
          Object {},
        ]
      }
    >
      TITLE
    </Text>
  </View>
</View>
`;

exports[`Button component renders disabled correctly 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      undefined,
      Object {},
      Object {
        "opacity": 0.8,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "padding": 10,
        },
        Object {},
        Object {
          "backgroundColor": "#E62272",
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#FFFFFF",
            "fontSize": 14,
            "justifyContent": "center",
            "textAlign": "center",
          },
          Object {},
        ]
      }
    >
      TITLE
    </Text>
  </View>
</View>
`;

exports[`Button component renders title correctly on Android 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      undefined,
      Object {},
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "padding": 10,
        },
        Object {},
        Object {
          "backgroundColor": "#E62272",
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#FFFFFF",
            "fontSize": 14,
            "justifyContent": "center",
            "textAlign": "center",
          },
          Object {},
        ]
      }
    >
      TITLE
    </Text>
  </View>
</View>
`;
